--- a/monthly_challenges/challenges/templates/challenges/challenge.html
+++ b/monthly_challenges/challenges/templates/challenges/challenge.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Monthly Challenge</title>
+    <title>Monthly Challenge for {{ month }}</title>
 </head>
 <body>
-    <h1>This month's Challenge</h1>
-    <h2>Go for a walk for at least 20 mins a day!</h2>
+    <h1>Monthly Challenge for {{ month }}</h1>
+    <h2>{{ text }}</h2>
 </body>
 </html>
