--- a/monthly_challenges/challenges/templates/challenges/challenge.html
+++ b/monthly_challenges/challenges/templates/challenges/challenge.html
@@ -7,6 +7,10 @@
 </head>
 <body>
     <h1>Monthly Challenge for {{ month|title }}</h1>
-    <h2>{{ text }}</h2>
+    {% if text %}
+        <h2>{{ text }}</h2>
+    {% else %}
+        <p>There is no challenge for {{ month }} yet</p>
+    {% endif %}
 </body>
 </html>
