--- a/monthly_challenges/challenges/templates/challenges/challenge.html
+++ b/monthly_challenges/challenges/templates/challenges/challenge.html
@@ -1,16 +1,14 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Monthly Challenge for {{ month|title }}</title>
-</head>
-<body>
-    <h1>Monthly Challenge for {{ month|title }}</h1>
-    {% if text %}
-        <h2>{{ text }}</h2>
-    {% else %}
-        <p>There is no challenge for {{ month }} yet</p>
-    {% endif %}
-</body>
-</html>
+{% extends 'base.html' %}
+
+{% block page_title %}
+  Monthly Challenge for {{ month|title }}
+{% endblock %}
+
+{% block content %}
+  <h1>Monthly Challenge for {{ month|title }}</h1>
+  {% if text %}
+    <h2>{{ text }}</h2>
+  {% else %}
+    <p>There is no challenge for {{ month }} yet</p>
+  {% endif %}
+{% endblock %}
