--- a/monthly_challenges/challenges/templates/challenges/challenge.html
+++ b/monthly_challenges/challenges/templates/challenges/challenge.html
@@ -5,6 +5,7 @@
 {% endblock %}
 
 {% block content %}
+    {% include "challenges/includes/header.html" %}
   <h1>Monthly Challenge for {{ month|title }}</h1>
   {% if text %}
     <h2>{{ text }}</h2>
