--- a/monthly_challenges/templates/base.html
+++ b/monthly_challenges/templates/base.html
@@ -1,3 +1,6 @@
+{% load static %}
+
+
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -8,6 +11,7 @@
         My Challenges
       {% endblock %}
     </title>
+    <link rel="stylesheet" href="{% static "styles.css" %}">
     {% block css_files %}{% endblock %}
   </head>
   <body>
