--- a/monthly_challenges/challenges/templates/challenges/challenge.html
+++ b/monthly_challenges/challenges/templates/challenges/challenge.html
@@ -16,6 +16,6 @@
   {% if text %}
     <h2>{{ text }}</h2>
   {% else %}
-    <p>There is no challenge for {{ month }} yet</p>
+    <p class="fallback">There is no challenge for {{ month }} yet</p>
   {% endif %}
 {% endblock %}
