--- a/my_site/blog/templates/blog/index.html
+++ b/my_site/blog/templates/blog/index.html
@@ -16,7 +16,7 @@
 
     <section id="welcome">
         <header>
-            <img src="" alt="Pat - The Author of this Blog">
+            <img src="{% static "blog/images/image_1.png" %}" alt="Pat - The Author of this Blog">
             <h2>Patrick's Blog</h2>
         </header>
         <p>Hi, this a blog</p>
@@ -29,7 +29,7 @@
             <li>
                 <article class="post">
                     <a href="">
-                        <img src="" alt="Mountain Hiking">
+                        <img src="{% static "blog/images/image_2.png" %}" alt="Mountain Hiking">
                         <div class="post__content">
                             <h3>Mountain Hiking</h3>
                             <p>There's nothing like the views when you get when hiking in the mounains!</p>
