--- a/my_site/blog/templates/blog/index.html
+++ b/my_site/blog/templates/blog/index.html
@@ -4,15 +4,11 @@
 {% block title %}My Blog{% endblock %}
 
 {% block css_files %}
+<link rel="stylesheet" href="{% static "blog/post.css" %}">
 <link rel="stylesheet" href="{% static "blog/index.css" %}">
 {% endblock  %}
 {% block content %}
-<header id="main-navigation">
-    <h1><a href="">Pat's Blog</a></h1>
-    <nav>
-        <a href="">All Posts</a>
-    </nav>
-</header>
+
 
     <section id="welcome">
         <header>
@@ -26,17 +22,7 @@
         <h2>My latest thoughts</h2>
 
         <ul>
-            <li>
-                <article class="post">
-                    <a href="">
-                        <img src="{% static "blog/images/image_2.png" %}" alt="Mountain Hiking">
-                        <div class="post__content">
-                            <h3>Mountain Hiking</h3>
-                            <p>There's nothing like the views when you get when hiking in the mounains!</p>
-                        </div>
-                    </a>
-                </article>
-            </li>
+           {% include "blog/includes/post.html" %}
         </ul>
     </section>
 
