--- a/my_site/blog/templates/blog/includes/post.html
+++ b/my_site/blog/templates/blog/includes/post.html
@@ -2,7 +2,7 @@
 
 <li>
     <article class="post">
-        <a href="">
+        <a href="{% url "post-detail-page" "the-mountains" %}">
             <img src="{% static 'blog/images/image_2.png' %}" alt="Mountain Hiking" style="max-width: 300px;">
             <div class="post__content">
                 <h3>Mountain Hiking</h3>
