--- a/my_site/templates/base.html
+++ b/my_site/templates/base.html
@@ -15,9 +15,9 @@
 
 <body>
     <header id="main-navigation">
-        <h1><a href="">Pat's Blog</a></h1>
+        <h1><a href="{% url "starting-page" %}">Pat's Blog</a></h1>
         <nav>
-            <a href="">All Posts</a>
+            <a href="{% url "posts-page" %}">All Posts</a>
         </nav>
     </header>
     {% block content %}{% endblock  %}
