--- a/my_site/blog/templates/blog/includes/post.html
+++ b/my_site/blog/templates/blog/includes/post.html
@@ -2,11 +2,11 @@
 
 <li>
     <article class="post">
-        <a href="{% url "post-detail-page" "the-mountains" %}">
-            <img src="{% static 'blog/images/image_2.png' %}" alt="Mountain Hiking" style="max-width: 300px;">
+        <a href="{% url "post-detail-page" post.slug %}">
+            <img src="{% static 'blog/images/'|add:post.image %}" alt="{{ post.title }}" style="max-width: 300px;">
             <div class="post__content">
-                <h3>Mountain Hiking</h3>
-                <p>There's nothing like the views when you get when hiking in the mounains!</p>
+                <h3>{{ post.title }}</h3>
+                <p>{{ post.excerpt }}</p>
             </div>
         </a>
     </article>
