--- a/my_site/blog/templates/blog/post_detail.html
+++ b/my_site/blog/templates/blog/post_detail.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% load static %}
 
-{% block title %}This Post Title{% endblock %}
+{% block title %}{{ post.title }}{% endblock %}
 
 {% block css_files %}
 <link rel="stylesheet" href="{% static "blog/post-details.css" %}">
@@ -9,26 +9,18 @@
 
 {% block content %}
 <section id="summary">
-    <h2>Post Title</h2>
+    <h2>{{ post.title }}</h2>
 
     <article>
-        <img src="{% static "blog/images/image_3.png" %}" alt="Post Title">
-        <address>By Pat</address>
+        <img src="{% static "blog/images/"|add:post.image %}" alt="Post Title">
+        <address>By {{ post.author }}</address>
         <div>
-            Last updated on <time>December 7th</time>  
+            Last updated on <time>{{ post.date }}</time>  
         </div>
     </article>
 </section>
 
 <main>
-    <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima unde, vitae deserunt et provident officia commodi neque voluptatem eligendi dolores reiciendis delectus! Voluptatibus maxime quis quisquam, nisi ullam velit exercitationem.
-    </p>
-    <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima unde, vitae deserunt et provident officia commodi neque voluptatem eligendi dolores reiciendis delectus! Voluptatibus maxime quis quisquam, nisi ullam velit exercitationem.
-    </p>
-    <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima unde, vitae deserunt et provident officia commodi neque voluptatem eligendi dolores reiciendis delectus! Voluptatibus maxime quis quisquam, nisi ullam velit exercitationem.
-    </p>
+    <p>{{ post.content|linebreaks }}</p>
 </main>
 {% endblock %}
