chapter 87: - include database queries

--- a/book_store/book_outlet/templates/book_outlet/index.html
+++ b/book_store/book_outlet/templates/book_outlet/index.html
@@ -4,7 +4,8 @@
 
 {% block content %}
 <ul>
-    <li>Book 1...</li>
-    <li>Book 2...</li>
+    {% for book in books %}
+    <li>{{ book.title }} Rating: {{ book.rating }}</li>
+    {% endfor %}
 </ul>
 {% endblock %}
