chapter 91: - implement  slugs - add db_index=True to slug attribute

--- a/book_store/book_outlet/templates/book_outlet/index.html
+++ b/book_store/book_outlet/templates/book_outlet/index.html
@@ -5,8 +5,7 @@
 {% block content %}
 <ul>
     {% for book in books %}
-   <a href="{{ book.get_absolute_url }}"> <li>1{{ book.title }} Rating: {{ book.rating }}</li></a>
-   <a href="{% url "book-detail" book.id %}"> <li>2{{ book.title }} Rating: {{ book.rating }}</li></a>
+   <a href="{{ book.get_absolute_url }}"> <li>{{ book.title }} Rating: {{ book.rating }}</li></a>
    <br>
    {% endfor %}
 </ul>
