--- a/my_site/blog/static/blog/index.css
+++ b/my_site/blog/static/blog/index.css
@@ -10,10 +10,10 @@
 }
 
 #welcome img {
-  width: 10rem;
-  height: 10rem;
-  object-fit: cover;
-  object-position: top;
+  width: 20rem;
+  height: 20rem;
+  object-fit: contain;
+  object-position: center;
   border: 5px solid white;
   border-radius: 12px;
   background-color: #ffe1bf;
@@ -33,7 +33,7 @@
   font-size: 1.5rem;
 }
 
-#latest-posts {
+#latest-courses {
   background-color: white;
   padding: 2rem;
   border-radius: 12px;
@@ -42,11 +42,11 @@
   box-shadow: 1px 1px 12px rgba(0, 0, 0, 0.4);
 }
 
-#latest-posts h2 {
+#latest-courses h2 {
   text-align: center;
 }
 
-#latest-posts ul {
+#latest-courses ul {
   list-style: none;
   margin: 0;
   padding: 0;
@@ -54,7 +54,7 @@
   gap: 1rem;
 }
 
-#latest-posts li {
+#latest-courses li {
   flex: 1;
 }
 
