updated frontend design

--- a/my_site/blog/templates/blog/index.html
+++ b/my_site/blog/templates/blog/index.html
@@ -19,17 +19,12 @@
     </section>
 
     <section id="latest-courses">
-        <h2>Aktuelles</h2>
 
-        <ul>
-            {% for course in courses %}
-           {% include "blog/includes/course.html" %}
-           {% endfor %}
-        </ul>
+           {% include "blog/includes/news.html" %}
     </section>
 
     <section id="about">
-        <h2>What I do</h2>
-        <p>Programming Django stuff</p>
+        <p>
+            Initiative für Hochbegabung e.V. 2024</p>
     </section>
 {% endblock %}
