--- a/my_site/blog/templates/blog/index.html
+++ b/my_site/blog/templates/blog/index.html
@@ -11,11 +11,13 @@
 
 
     <section id="welcome">
+        <img src="{% static 'blog/images/Header.png' %}" alt="Background" class="background-image">
         <header>
-            <img src="{% static "blog/images/infho.png" %}" alt="Pat - The Author of this Blog">
-            <h2>Initiative für Hochbegabung e.V.</h2>
+            <img src="{% static "blog/images/infho.png" %}" alt="Pat - The Author of this Blog"id="authorPhoto">
+            <h1  class="xyz">Initiative für Hochbegabung e.V.</h1>
+
         </header>
-        <p>Hi, this a blog</p>
+
     </section>
 
     <section id="latest-courses">
