--- a/my_site/templates/base.html
+++ b/my_site/templates/base.html
@@ -17,7 +17,7 @@
     <header id="main-navigation">
         <h1><a href="{% url "starting-page" %}">Initiative für Hochbegabung e.V.</a></h1>
         <nav>
-            <a href="{% url "course-page" %}">Alle Kurse</a>
+            <a href="{% url "course-page" %}" class="xyz">Alle Kurse</a>
         </nav>
     </header>
     {% block content %}{% endblock  %}
