--- a/my_site/blog/static/blog/index.css
+++ b/my_site/blog/static/blog/index.css
@@ -1,6 +1,17 @@
 #welcome {
-  background: linear-gradient(to right top, #6305dd, #390281);
+  /* position: relative; */
+  /* background: linear-gradient(to right top, #6305dd, #390281); */
   padding: 6rem 12%;
+}
+
+.background-image {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 50%;
+  object-fit: cover;
+  z-index: -1; /* Ensures the image stays in the background */
 }
 
 #welcome header {
@@ -9,7 +20,7 @@
   margin: 3rem auto;
 }
 
-#welcome img {
+#authorPhoto {
   width: 20rem;
   height: 20rem;
   object-fit: contain;
@@ -21,11 +32,11 @@
   box-shadow: 0 2px 8px rgba(0, 0, 0, 0.25);
 }
 
-#welcome h2 {
+#welcome h1 {
   font-size: 3.5rem;
   margin: 0 0 0 2rem;
-  color: #e4e4e4;
-  width: 10rem;
+  color: #000000;
+  /* width: 40rem; */
 }
 
 #welcome p {
