added ferienkurse model with admin registration + frontend

--- a/my_site/static/app.css
+++ b/my_site/static/app.css
@@ -33,7 +33,7 @@ h3 {
 
 #main-navigation a {
   text-decoration: none;
-  color: #390281;
+  color: #000000;
   font-weight: bold;
 }
 
@@ -44,5 +44,5 @@ h3 {
 
 #main-navigation h1 a:hover,
 #main-navigation h1 a:active {
-  color: white;
+  color: rgb(0, 0, 0);
 }
