--- a/my_site/templates/base.html
+++ b/my_site/templates/base.html
@@ -18,6 +18,7 @@
         <h1><a href="{% url "starting-page" %}">Initiative für Hochbegabung e.V.</a></h1>
         <nav>
             <a href="{% url "course-page" %}" class="xyz">Alle Kurse</a>
+            <a href="{% url "vacation-course-page" %}" class="xyz">Ferienkurse</a>
         </nav>
     </header>
     {% block content %}{% endblock  %}
