--- a/feedback/reviews/templates/reviews/review.html
+++ b/feedback/reviews/templates/reviews/review.html
@@ -6,6 +6,10 @@
     <title>Your Review</title>
 </head>
 <body>
-    
+    <form>
+        <label for="username">Your name</label>
+        <input id="username" name="username" type="text">
+        <button>Send</button>
+    </form>
 </body>
 </html>
