chapter 134: change form to POST request

--- a/feedback/reviews/templates/reviews/review.html
+++ b/feedback/reviews/templates/reviews/review.html
@@ -6,10 +6,10 @@
     <title>Your Review</title>
 </head>
 <body>
-    <form>
+    <form method="POST">
         <label for="username">Your name</label>
         <input id="username" name="username" type="text">
-        <button>Send</button>
+        <button type="submit">Send</button>
     </form>
 </body>
 </html>
