- chapter 136 - add redirect after submit with action="" - access entered data from template - add redirect page that is based on GET request

--- a/feedback/reviews/templates/reviews/review.html
+++ b/feedback/reviews/templates/reviews/review.html
@@ -6,7 +6,7 @@
     <title>Your Review</title>
 </head>
 <body>
-    <form method="POST">
+    <form action="/" method="POST">
         {% csrf_token %}
         <label for="username">Your name</label>
         <input id="username" name="username" type="text">
