--- a/feedback/reviews/templates/reviews/thank_you.html
+++ b/feedback/reviews/templates/reviews/thank_you.html
@@ -1,11 +1,11 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Thank you!</title>
-</head>
-<body>
-    <h1>Thank you!</h1>
-</body>
-</html>
+{% extends "reviews/base.html" %}
+
+{% block title %}
+Your Review
+{% endblock %}
+
+
+{% block content %}
+<h1>Thank you!</h1>
+{% endblock %}
+
