chapter 155: - create detail templateView - pass dynamic segment through kwargs

--- a/feedback/reviews/templates/reviews/review_list.html
+++ b/feedback/reviews/templates/reviews/review_list.html
@@ -7,7 +7,8 @@ All Reviews
 {% block content %}
     <ul>
         {% for review in reviews %}
-            <li>{{ review.user_name }} (Rating: {{ review.rating }})</li>
+            <li>{{ review.user_name }} (Rating: {{ review.rating }}) <a href="">Link</a></li>
+            
         {% endfor %}
     </ul>
 {% endblock %}
