--- a/feedback/reviews/templates/reviews/single_review.html
+++ b/feedback/reviews/templates/reviews/single_review.html
@@ -9,5 +9,9 @@ Review Detail
 <h1>{{ review.user_name }}</h1>
 <p>Rating: {{ review.rating }}</p>
 <p>{{ review.review_text }}</p>
+<form action="/reviews/favorite" methods="POST">
+    <input type="hidden" name="review_id" value="{{ review.id }}">
+    <button>Favorite</button>
+</form>
 
 {% endblock %}
