--- a/feedback/reviews/templates/reviews/single_review.html
+++ b/feedback/reviews/templates/reviews/single_review.html
@@ -9,7 +9,7 @@ Review Detail
 <h1>{{ review.user_name }}</h1>
 <p>Rating: {{ review.rating }}</p>
 <p>{{ review.review_text }}</p>
-<form action="/reviews/favorite" methods="POST">
+<form action="/reviews/favorite" method="POST">
     {% csrf_token %}
     <input type="hidden" name="review_id" value="{{ review.id }}">
     <button>Favorite</button>
