chapter 190: - create Model Form - pass form to template with View - update html

--- a/my_site/blog/templates/blog/post_detail.html
+++ b/my_site/blog/templates/blog/post_detail.html
@@ -29,4 +29,11 @@
 <main>
     <p>{{ post.content|linebreaks }}</p>
 </main>
+
+<div>
+    <form action="">
+        {{ comment_form }}
+        <button>Comment</button>
+    </form>
+</div>
 {% endblock %}
