--- a/my_site/blog/templates/blog/post_detail.html
+++ b/my_site/blog/templates/blog/post_detail.html
@@ -40,6 +40,16 @@
     <p>{{ post.content|linebreaks }}</p>
 </main>
 
+<section id="comments">
+    <ul>
+        {% for comment in comments %}
+            <li>
+                <h2>{{ comment.user_name }}</h2>
+                <p>{{ comment.text|linebreaks }}</p>
+            </li>
+        {% endfor %}
+    </ul>
+</section>
 
 
 <section id="comment-form">
